fix focus image on small screens

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-:root {
-    --main-bg-color: #d17272;
-    --card-bg-color: #c4c4c4;
-}
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -20,6 +15,9 @@ body {
     flex-direction: column;
     min-height: 100%;
     /* <-- this is for correct footer placement */
+    background: linear-gradient(30deg, rgba(2, 0, 36, 1) 0%, rgba(8, 7, 106, 1) 21%, rgba(9, 9, 121, 1) 37%, rgba(26, 9, 120, 1) 54%, rgba(0, 212, 255, 1) 97%);
+    background-attachment: fixed;
+    color: white;
 }
 
 h1 {
@@ -33,7 +31,8 @@ h1 img {
     width: 50px;
     height: auto;
     position: relative;
-    bottom: -3px
+    bottom: -3px;
+    filter: invert(100%) sepia(0%) saturate(7476%) hue-rotate(110deg) brightness(98%) contrast(108%);
 }
 
 /* We might want to check with Jakob that our usage of 'position: relative' is warranted */
@@ -182,25 +181,27 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    font-family: Poppins;
 }
 
 /* main>div is the normal sized images */
 main>div {
     margin: 1rem;
-    background-color: var(--card-bg-color);
-    border-radius: 20px;
+    background-color: white;
     border: 1px solid black;
-    padding: 0.5rem;
     display: flex;
     flex-direction: column;
     place-items: center;
+    color: black;
+    border-radius: 20px;
+    width: fit-content;
 }
 
 main div img:not(#enlarged-image) {
     width: 300px;
     height: 300px;
     object-fit: cover;
-    border-radius: 20px;
+    border-radius: 20px 20px 0 0;
     margin-bottom: 1rem;
 }
 
@@ -210,7 +211,7 @@ main div button:nth-of-type(2) {
     cursor: pointer;
     background-image: url("./assets/download-icon.svg");
     background-repeat: no-repeat;
-    background-color: var(--card-bg-color);
+    background-color: white;
     width: 2rem;
     border: 0;
 }
@@ -232,6 +233,7 @@ main div #enlarged-image {
     object-fit: cover;
     border-radius: 20px;
     margin-bottom: 1rem;
+    max-width: 80vw;    
 }
 
 /* vvv this needs to be changed if we change to icons for the buttons */
@@ -256,7 +258,8 @@ main>#enlarged-image-div>#enlarged-image-go-back-button {}
 }
 
 #navigationButtons button {
-    background-color: var(--main-bg-color);
+    color: white;
+    background-color: transparent;
     border: 0;
     cursor: pointer;
     padding: 1rem;
